# ernie-demo

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py  streamlit.py
app/config/: settings.py
app/services/: plan_excute.py  tools.py
